added some thanks

--- a/README
+++ b/README
@@ -197,6 +197,14 @@ I've taken bits and pieces from wherever I could get them, so if you see somethi
 
 There's lots to do. Lot of repetition and ugly bits here and there, but it works so I'll get round to it when I can.
 
+==THANKS GO TO
+
+Peter Hickman for writing the original library in Perl that inspired this on in Ruby.
+
+My good friend Johan Bergsten for helping me out with the Swedish names.
+
+==THE END UNLESS YOU WANT TO READ THE LICENCE
+
 *Iain Barnett*
 
 ==LICENCE:
