--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-v0.0.5 Moved into new dir structure to avoid filename collisions in LOAD_PATH
+v0.0.5 Moved into new dir structure to avoid filename collisions in LOAD_PATH. Greatly improved American names.
 
 v0.0.4 Removed shebangs and requires that were causing warnings. Added reset methods to Choice.
 
