--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.0.7  All Basque names added.
+
 v0.0.6 Added ancient Greek names. Improved default method call for formats.
 
 v0.0.5 Moved into new dir structure to avoid filename collisions in LOAD_PATH. Greatly improved American names.
