--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.0.11 Added German names.
+
+v0.0.10 Improved test coverage, very small tweaks to code to comply better with tests.
+
 v0.0.9 Added particle formats for French last names.
 
 v0.0.8 Added French names. Added Thai script names, unfortunately the last names are places as couldn't get a proper list. Added a negation for the add_ method, see README
