added Finnish names and updated support docs to reflect this

--- a/README
+++ b/README
@@ -220,7 +220,12 @@ There's lots to do. Lot of repetition and ugly bits here and there, but it works
 
 Peter Hickman for writing the original library in Perl that inspired this on in Ruby.
 
-My good friend Johan Bergsten for helping me out with the Swedish names.
+My good friends:
+Johan Bergsten for helping me out with the Swedish names.
+HALLOJULIA (hayl yeah!) for helping me with the German names.
+Aino Rissanen for helping me with the Finnish names.
+
+Special thanks to my agent, all the people at Marvel and DC for such fine comics, my wife and my mom for supporting me when no one else believed in me, but (sniff) most thanks goes to Noel Edmonds and Jeremy Kyle, for making daytime TV so creepy and inane that I rarely waste time watching it.
 
 ==THE END UNLESS YOU WANT TO READ THE LICENCE
 
