--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.0.12 Added Finnish names.
+
 v0.0.11 Added German names.
 
 v0.0.10 Improved test coverage, very small tweaks to code to comply better with tests.
