Added Finnish prefixes, updated CHANGELOG and gemspec to reflect this

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.0.14 Added Finnish prefixes.
+
+v0.0.13 Added American prefixes. Altered British prefix ratios to be more realistic, and removed the dot, that's not supposed to be there! (you learn something new every day:)
+
 v0.0.12 Added Finnish names.
 
 v0.0.11 Added German names.
