--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.0.16 Added English, Scottish and Welsh prefixes for convenience.
+
+v0.0.15 Bugfix: prefix and suffix should now work. Finnish names have utf8 sign so should work. Added utf8 to all Name files, just in case. Fixed some nasty copy and paste errors with prefixes.
+
 v0.0.14 Added Finnish prefixes.
 
 v0.0.13 Added American prefixes. Altered British prefix ratios to be more realistic, and removed the dot, that's not supposed to be there! (you learn something new every day:)
