made instructions for using PEM file a bit clearer

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ You'll need at least Ruby v1.9.1
 
 Get the public key from http://github.com/yb66/RandomPerson/blob/master/gem-public_cert.pem and do:
 
-  gem cert --add /path/to/public_cert.pem
+  gem cert --add /path/to/wherever/you/downloaded/this/to/public_cert.pem
   
 then install it:
 
