--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.0.19 Start of some specs.
+
 v0.0.18 Improved documentation a bit. Changed some filenames to fix a problem with case sensitivity on some systems.
 
 v0.0.17 Added Spanish prefixes. Improved ratios for prefixes to make chance of Dr equal between genders.
