--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.0.0 Lots of breaking changes to API. Lots more specs, for code and namefiles. Some general cleaning of data too.
+
 v0.0.19 Start of some specs.
 
 v0.0.18 Improved documentation a bit. Changed some filenames to fix a problem with case sensitivity on some systems.
